k8s-spring-boot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vamc-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jhooq-springboot
  template:
    metadata:
      labels:
        app: jhooq-springboot
    spec:
      containers:
        - name: springboot
          image: 830714/vamc:vamc             
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jhooq-springboot
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jhooq-springboot
